--- a/src/Styles/_Sizes.scss
+++ b/src/Styles/_Sizes.scss
@@ -150,7 +150,7 @@
   }
 
   .project-card-description {
-    min-width: 50%;
+    max-width: 50%;
   }
 
   //* App
